export class Cargo {
    type: string;
    weight: number;

    constructor(type: string, weight: number) {
        this.type = type;
        this.weight = weight;
    }
}
